automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -35,24 +35,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n",
+      "/opt/conda/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -120,7 +130,7 @@
        "1  msQe1u7Z_XuqjGoqhB0J5g  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,13 +152,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2610"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "billy = df['stars'].map(lambda x: int(x)**2)\n",
+    "df['stars^2']=billy\n",
+    "len(df)"
    ]
   },
   {
@@ -161,13 +182,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    11\n",
+       "1    10\n",
+       "2    09\n",
+       "3    02\n",
+       "4    06\n",
+       "Name: date, dtype: object"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "df.date.map(lambda x: x[5:7]).head()"
    ]
   },
   {
@@ -180,13 +215,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "77.06551724137931"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "df['text'].map(lambda x: len(x.split())).mean()\n"
    ]
   },
   {
@@ -198,13 +242,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>business_id</th>\n",
+       "      <th>cool</th>\n",
+       "      <th>date</th>\n",
+       "      <th>funny</th>\n",
+       "      <th>review_id</th>\n",
+       "      <th>stars</th>\n",
+       "      <th>text</th>\n",
+       "      <th>useful</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>stars^2</th>\n",
+       "      <th>wordcount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>pomGBqfbxcqPv14c3XH-ZQ</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2012-11-13</td>\n",
+       "      <td>0</td>\n",
+       "      <td>dDl8zu1vWPdKGihJrwQbpw</td>\n",
+       "      <td>5</td>\n",
+       "      <td>I love this place! My fiance And I go here atl...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>msQe1u7Z_XuqjGoqhB0J5g</td>\n",
+       "      <td>25</td>\n",
+       "      <td>58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>jtQARsP6P-LbkyjbO1qNGg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2014-10-23</td>\n",
+       "      <td>1</td>\n",
+       "      <td>LZp4UX5zK3e-c5ZGSeo3kA</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Terrible. Dry corn bread. Rib tips were all fa...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>msQe1u7Z_XuqjGoqhB0J5g</td>\n",
+       "      <td>1</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Ums3gaP2qM3W1XcA5r6SsQ</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2014-09-05</td>\n",
+       "      <td>0</td>\n",
+       "      <td>jsDu6QEJHbwP2Blom1PLCA</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Delicious healthy food. The steak is amazing. ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>msQe1u7Z_XuqjGoqhB0J5g</td>\n",
+       "      <td>25</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5</td>\n",
+       "      <td>vgfcTvK81oD4r50NMjU2Ag</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2011-02-25</td>\n",
+       "      <td>0</td>\n",
+       "      <td>pfavA0hr3nyqO61oupj-lA</td>\n",
+       "      <td>1</td>\n",
+       "      <td>This place sucks. The customer service is horr...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>msQe1u7Z_XuqjGoqhB0J5g</td>\n",
+       "      <td>1</td>\n",
+       "      <td>82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10</td>\n",
+       "      <td>yFumR3CWzpfvTH2FCthvVw</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2016-06-15</td>\n",
+       "      <td>0</td>\n",
+       "      <td>STiFMww2z31siPY7BWNC2g</td>\n",
+       "      <td>5</td>\n",
+       "      <td>I have been an Emerald Club member for a numbe...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>TlvV-xJhmh7LCwJYXkV-cg</td>\n",
+       "      <td>25</td>\n",
+       "      <td>32</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0             business_id  cool        date  funny  \\\n",
+       "0           1  pomGBqfbxcqPv14c3XH-ZQ     0  2012-11-13      0   \n",
+       "1           2  jtQARsP6P-LbkyjbO1qNGg     1  2014-10-23      1   \n",
+       "2           4  Ums3gaP2qM3W1XcA5r6SsQ     0  2014-09-05      0   \n",
+       "3           5  vgfcTvK81oD4r50NMjU2Ag     0  2011-02-25      0   \n",
+       "4          10  yFumR3CWzpfvTH2FCthvVw     0  2016-06-15      0   \n",
+       "\n",
+       "                review_id  stars  \\\n",
+       "0  dDl8zu1vWPdKGihJrwQbpw      5   \n",
+       "1  LZp4UX5zK3e-c5ZGSeo3kA      1   \n",
+       "2  jsDu6QEJHbwP2Blom1PLCA      5   \n",
+       "3  pfavA0hr3nyqO61oupj-lA      1   \n",
+       "4  STiFMww2z31siPY7BWNC2g      5   \n",
+       "\n",
+       "                                                text  useful  \\\n",
+       "0  I love this place! My fiance And I go here atl...       0   \n",
+       "1  Terrible. Dry corn bread. Rib tips were all fa...       3   \n",
+       "2  Delicious healthy food. The steak is amazing. ...       0   \n",
+       "3  This place sucks. The customer service is horr...       2   \n",
+       "4  I have been an Emerald Club member for a numbe...       0   \n",
+       "\n",
+       "                  user_id  stars^2  wordcount  \n",
+       "0  msQe1u7Z_XuqjGoqhB0J5g       25         58  \n",
+       "1  msQe1u7Z_XuqjGoqhB0J5g        1         30  \n",
+       "2  msQe1u7Z_XuqjGoqhB0J5g       25         30  \n",
+       "3  msQe1u7Z_XuqjGoqhB0J5g        1         82  \n",
+       "4  TlvV-xJhmh7LCwJYXkV-cg       25         32  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "billieta = df['text'].map(lambda x: len(x.split()))\n",
+    "df['wordcount']=billieta\n",
+    "df.head()"
    ]
   },
   {
@@ -216,11 +410,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Short'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def rewrite_as_lambda(value):\n",
     "    if len(value) > 50:\n",
@@ -229,18 +432,19 @@
     "        return 'Medium'\n",
     "    else:\n",
     "        return 'Long'\n",
-    "#Hint: nest your if, else conditionals"
+    "#Hint: nest your if, else conditionals\n",
+    "array = [1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,11,11,1,1,1,1,1,1,1,1,1,1,1,1,1,1,11,11,1,1,1,11,1,1,1,1,11,1,1,1,1,1,1,1,11]\n",
+    "rewrite_as_lambda(array)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "bill = df['wordcount'].map(lambda x: 'short' if x > 50 else ('Medium' if x < 80 else 'Long'))\n",
+    "df['review_len']=bill"
    ]
   },
   {
@@ -255,13 +459,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       12--\n",
+       "1       14--\n",
+       "2       14--\n",
+       "3       11--\n",
+       "4       16--\n",
+       "5       16--\n",
+       "6       14--\n",
+       "7       17--\n",
+       "8       17--\n",
+       "9       17--\n",
+       "10      15--\n",
+       "11      12--\n",
+       "12      12--\n",
+       "13      12--\n",
+       "14      12--\n",
+       "15      14--\n",
+       "16      16--\n",
+       "17      15--\n",
+       "18      15--\n",
+       "19      17--\n",
+       "20      16--\n",
+       "21      16--\n",
+       "22      16--\n",
+       "23      12--\n",
+       "24      17--\n",
+       "25      17--\n",
+       "26      10--\n",
+       "27      16--\n",
+       "28      16--\n",
+       "29      16--\n",
+       "        ... \n",
+       "2580    15--\n",
+       "2581    13--\n",
+       "2582    16--\n",
+       "2583    15--\n",
+       "2584    17--\n",
+       "2585    15--\n",
+       "2586    15--\n",
+       "2587    12--\n",
+       "2588    15--\n",
+       "2589    15--\n",
+       "2590    07--\n",
+       "2591    16--\n",
+       "2592    15--\n",
+       "2593    13--\n",
+       "2594    11--\n",
+       "2595    14--\n",
+       "2596    14--\n",
+       "2597    16--\n",
+       "2598    11--\n",
+       "2599    14--\n",
+       "2600    12--\n",
+       "2601    14--\n",
+       "2602    12--\n",
+       "2603    13--\n",
+       "2604    13--\n",
+       "2605    13--\n",
+       "2606    16--\n",
+       "2607    16--\n",
+       "2608    13--\n",
+       "2609    16--\n",
+       "Name: date, Length: 2610, dtype: object"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "blank = []\n",
+    "year = df['date'].map(lambda x: x[0:4])\n",
+    "month = df['date'].map(lambda x: x[5:7])\n",
+    "day = df['date'].map(lambda x: x[8:10])\n",
+    "for i in list(range(0, len(day))):\n",
+    "    blank.append(day[i]+'-'+month[i]+'-'+year[i])\n",
+    "#for i in list(range(0, len(year)))\n",
+    "df['date']=blank\n",
+    "df['date']\n",
+    "year"
    ]
   },
   {
@@ -272,6 +555,13 @@
     "\n",
     "Great! Hopefully you're getting the hang of lambda functions now! It's important not to overuse them - it will often make more sense to define a function so that it's reusable elsewhere. But whenever you need to quickly apply some simple processing to a collection of data you have a new technique that will help you to do just that. It'll also be useful if you're reading someone elses code that happens to use lambdas."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -290,7 +580,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
