automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -543,8 +543,7 @@
     "    blank.append(day[i]+'-'+month[i]+'-'+year[i])\n",
     "#for i in list(range(0, len(year)))\n",
     "df['date']=blank\n",
-    "df['date']\n",
-    "year"
+    "df['date']\n"
    ]
   },
   {
